--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="incorrect_toast">Incorrect!</string>
     <string name="prev_button">Prev</string>
     <string name="next_button">Next</string>
-    <string name="question1">Question_1</string>
-    <string name="question2">Question_2</string>
-    <string name="question3">Question_3</string>
+    <string name="question1">Is Israel Located in Asia continent</string>
+    <string name="question2">Is New-Zealand in Europe</string>
+    <string name="question3">Does Israel and Egypt share a border</string>
     <string name="warning_text">Are you sure you want to cheat</string>
     <string name="show_answer_button">Show Answer</string>
     <string name="cheat_button">Cheat!</string>
